--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -5,7 +5,7 @@ jobs:
     docker:
       - image: circleci/python:3.7
 
-    working_directory: ~/repo
+    working_directory: /Users/sleira/Personal/Projects/python-continuous-integration
 
     steps:
       # Step 1: obtain repo from GitHub
@@ -14,13 +14,13 @@ jobs:
       - run:
           name: install dependencies
           command: |
-            python3 -m venv venv
-            . venv/bin/activate
+            python3 -m venv ci
+            . ci/bin/activate
             pip install -r requirements.txt
       # Step 3: run linter and tests
       - run:
           name: run tests
           command: |
-            . venv/bin/activate
-            flake8 --exclude=venv* --statistics
+            . ci/bin/activate
+            flake8 --exclude=ci* --statistics
             pytest -v --cov=calculator
